v1.4.4 on 2024-12-27. Fix bug '3-4 tip-calculator-app-main' comment the overflow-x property on 'div.output-item' due to scroll bar always showed on edge browser.

--- a/3-4 tip-calculator-app-main/style.css
+++ b/3-4 tip-calculator-app-main/style.css
@@ -175,7 +175,7 @@ section.output {
     border-radius: 16px;
     & div.output-item {
         display: flex;
-        overflow-x: scroll;
+        /* overflow-x: scroll; */
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
